<resources>
    <string name="app_name">Task_Madar</string>
    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="title">Job title: </string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="error">\"Please enter name and gender \"</string>
</resources>
